added placeholder in lookup input

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="my-class">
         <h1>Oracle Card Reading</h1>
         <p>There are 24 cards in the deck. To see any card, simply type in card#. (card24 for example)</p>
-        <input type="text">
+        <input type="text" placeholder="card1">
         <button>Card Lookup</button>
         <h2>Result: </h2><h2 id="result"></h2>
         <h3>number:</h3><h3 id="num"></h3>
