moved random card button and added style

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
     <div class="my-class">
         <h1>Oracle Card Reading</h1>
         <p>There are 24 cards in the deck. To see any card, simply type in card#. (card24 for example)</p>
-        <input type="text">
+        <input type="text" placeholder="card#">
         <button>Card Lookup</button>
+        <button id="random">Pick a  Random Card</button>
         <h2>Result: </h2><h2 id="result"></h2>
         <h3>number:</h3><h3 id="num"></h3>
         <img class="orientation" src="img/sacredGeometry001.jpeg" alt="seed of life">
 
-        <button id="random">Pick a  Random Card</button>
+        
         <h4>Crystal Photo by <a href="https://unsplash.com/de/@jyeo?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">J Yeo</a> on <a href="https://unsplash.com/s/photos/crystals?license=free&utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
         </h4>
     </div>
