--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="my-class">
         <h1>Oracle Card Reading</h1>
-        <p>There are 24 cards in the deck. To see any card, simply type in card#. (card24 for example)</p>
-        <input type="text" placeholder="card#">
+        <p>There are 24 cards in the deck. To see any card, simply type in a number between 1 - 24.</p>
+        <input type="text">
         <button>Card Lookup</button>
         <button id="random">Pick a  Random Card</button>
         <h2>Result: </h2><h2 id="result"></h2>
