--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oracle Card Reading</title>
+    <link
+    rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="img/favicon.png?v=6"  />
     <!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
