including text for getting the reversed card lookups

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="my-class">
         <h1>Oracle Card Reading</h1>
-        <p>There are 24 cards in the deck. To see any card, simply type in a number between 1 - 24.</p>
+        <p>There are 24 cards in the deck. To see any card, simply type in a number between 1 - 24. For the reversed image and meaning, enter the number followed by the word Reversed.</p>
         <input type="text">
         <button>Card Lookup</button>
         <button id="random">Pick a  Random Card</button>
