updated text in html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="my-class container">
         <div class="container">
             <h1>Oracle Card Reading</h1>
-            <p>There are 24 cards in the deck. To see any card, simply type in a number between 1 - 24. For the reversed image and meaning, enter the number followed by the word Reversed.</p>
+            <p>You can lookup any of the 24 cards or pick a random card.</p>
             <!-- <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle=""
             </div> -->
