--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="my-class container">
+    <div class="my-class container rounded-2">
         <div class="container">
             <h1>Oracle Card Reading</h1>
             <p>You can lookup any of the 24 cards or pick a random card.</p>
@@ -89,7 +89,7 @@
             <button type="button" class="btn btn-dark" id="random">Pick a  Random Card</button>
             <h2>Result: </h2><h2 id="result"></h2>
             <h3>number:</h3><h3 id="num"></h3>
-            <img src="img/sacredGeometry001.jpeg" alt="seed of life">
+            <img class="rounded-3" src="img/sacredGeometry001.jpeg" alt="seed of life">
     
             <p class="pt-3" >Original artwork by <a href="https://www.racheleckenrod.com">Rachel Eckenrod</a></p>
             <p class="">Crystal Photo by <a href="https://unsplash.com/de/@jyeo?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">J Yeo</a> on <a href="https://unsplash.com/s/photos/crystals?license=free&utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
