--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <h3>number:</h3><h3 id="num"></h3>
             <img class="rounded-3" src="img/sacredGeometry001.jpeg" alt="seed of life">
     
-            <p class="pt-3" >Original artwork by <a href="https://www.racheleckenrod.com">Rachel Eckenrod</a></p>
+            <p class="pt-3" >Website and Original artwork by <a href="https://www.racheleckenrod.com">Rachel Eckenrod</a></p>
             <p class="">Crystal Photo by <a href="https://unsplash.com/de/@jyeo?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">J Yeo</a> on <a href="https://unsplash.com/s/photos/crystals?license=free&utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
             </p>
         </div>
