added astras cover artwork

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 
             <div class="reading">
-                <img class="rounded-3" src="img/sacredGeometry006.jpeg" alt="pop out eyeball">
+                <img class="rounded-3" src="img/AstraArt.jpg" alt="pop out eyeball">
 
                   <div class="ps-4">
                     <h3 id="meaning"></h3>
