--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     href="img/favicon.png?v=6"  />
     <!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css
-        ">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -22,21 +20,47 @@
             <h1>Oracle Card Reading</h1>
             <h2>THE HEALER'S EMERGENCE: </h2>
             <p> ~ Remember Who You Are & Be the Sovereign of Your Realm ~ </p>
-            <p>"Meet Agnes. 
-              Agnes, like so many Healers, has been on quite a journey - for several lifetimes.
-              A journey of trauma, despair, loneliness.
-              Of self-teaching, inner work. Growth.
-              Of mowing everything to the ground
-              and starting anew - the phoenix from the ashes.
-              A journey of cautious (at first) self-love.
-              Of believing in her gifts - even when no one else did (or could).
-              Of coming into her power as the Massively Magical Healer-Shaman-Witch that is her True Essence.
-              Agnes has a story to share with you. 
-              A healing story.
-              She thinks you will resonate with it. Hunger for it, even.
-              She feels that - once you hear it - you will KNOW it.
-              And you'll be set free - free to BE YOU - once and for all.
-              For, Beloved Healer, it's your story, too."</p>
+            <div class="d-md-none">
+              <p>"Meet Agnes. 
+                Agnes, like so many Healers, has been on quite a journey - for several lifetimes.
+                A journey of trauma, despair, loneliness.
+                Of self-teaching, inner work. Growth.
+              </p>
+              <a href="#hiddenText" class="btn btn-link" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="hiddenText">See More</a>
+            </div>
+            <div class="d-none d-md-block">
+              <p>
+                  "Meet Agnes. 
+                  Agnes, like so many Healers, has been on quite a journey - for several lifetimes.
+                  A journey of trauma, despair, loneliness.
+                  Of self-teaching, inner work. Growth.
+                  Of mowing everything to the ground
+                  and starting anew - the phoenix from the ashes.
+                  A journey of cautious (at first) self-love.
+                  Of believing in her gifts - even when no one else did (or could).
+                  Of coming into her power as the Massively Magical Healer-Shaman-Witch that is her True Essence.
+                  Agnes has a story to share with you.
+                  A healing story.
+                  She thinks you will resonate with it. Hunger for it, even.
+                  She feels that - once you hear it - you will KNOW it.
+                  And you'll be set free - free to BE YOU - once and for all.
+                  For, Beloved Healer, it's your story, too."
+              </p>
+          </div>
+            <div id="hiddenText" class="collapse">
+              <p>Of mowing everything to the ground
+                and starting anew - the phoenix from the ashes.
+                A journey of cautious (at first) self-love.
+                Of believing in her gifts - even when no one else did (or could).
+                Of coming into her power as the Massively Magical Healer-Shaman-Witch that is her True Essence.
+                Agnes has a story to share with you. 
+                A healing story.
+                She thinks you will resonate with it. Hunger for it, even.
+                She feels that - once you hear it - you will KNOW it.
+                And you'll be set free - free to BE YOU - once and for all.
+                For, Beloved Healer, it's your story, too."</p>
+            </div>
+              
 
               <p>You can lookup any of the 24 cards or pick a random card.</p>
 
@@ -134,9 +158,6 @@
     <!-- <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script> -->
     <script src="//cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-  
-</body>
     <script src='js/main.js'></script>
 </body>
 </html>
